@@ -8,7 +8,6 @@ import goorm.athena.domain.imageGroup.entity.ImageGroup;
 import goorm.athena.domain.user.entity.User;
 import goorm.athena.global.exception.CustomException;
 import goorm.athena.global.exception.ErrorCode;
-import jakarta.transaction.Transactional;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
@@ -30,7 +29,7 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
         bankAccountRepository.save(bankAccount);
 
         // when & then
-        assertThatThrownBy(() -> bankAccountService.getBankAccount(100000L))
+        assertThatThrownBy(() -> bankAccountQueryService.getBankAccount(100000L))
                 .isInstanceOf(CustomException.class)
                 .hasMessageContaining(ErrorCode.BANK_ACCOUNT_NOT_FOUND.getErrorMessage());
     }
@@ -46,7 +45,7 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
         bankAccountRepository.save(bankAccount);
 
         // when
-        BankAccount found = bankAccountService.getBankAccount(bankAccount.getId());
+        BankAccount found = bankAccountQueryService.getBankAccount(bankAccount.getId());
 
         // then
         assertThat(found.getId()).isEqualTo(bankAccount.getId());
@@ -58,17 +57,17 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
     @Test
     void createBankAccount_Primary() {
         // given
-        ImageGroup imageGroup = setupImageGroup();
-        User user = setupUser("123", "123", "123", imageGroup);
-        userRepository.save(user);
+        User user = userRepository.findById(2L).get();
+
         BankAccountCreateRequest request = new BankAccountCreateRequest("123", "123", "123");
 
         // when
-        bankAccountService.createBankAccount(user.getId(), request);
+        bankAccountCommandService.createBankAccount(user.getId(), request);
 
         // then
         List<BankAccount> infos = bankAccountRepository.findAllByUserId(user.getId());
-        assertThat(infos.get(0).isDefault()).isTrue();
+        assertThat(infos.getLast().isDefault()).isTrue();
+        assertThat(infos.getFirst().isDefault()).isFalse();
     }
 
     @DisplayName("기본 계좌 정보를 조회할 시 해당 정보가 존재하지 않을 경우 에러를 리턴한다.")
@@ -82,7 +81,7 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
         // 기본 계좌 정보 없음 상태
 
         // when & then
-        assertThatThrownBy(() -> bankAccountService.getPrimaryAccount(100000L))
+        assertThatThrownBy(() -> bankAccountQueryService.getPrimaryAccount(100000L))
                 .isInstanceOf(CustomException.class)
                 .hasMessageContaining(ErrorCode.BANK_ACCOUNT_NOT_FOUND.getErrorMessage());
     }
@@ -102,7 +101,7 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
         int size = bankAccountRepository.findAllByUserId(user.getId()).size();
 
         // when
-        bankAccountService.createBankAccount(user.getId(), request);
+        bankAccountCommandService.createBankAccount(user.getId(), request);
 
         // then
         List<BankAccount> infos = bankAccountRepository.findAllByUserId(user.getId());
@@ -114,16 +113,13 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
     @Test
     void changeBankAccountState_NotMyUser() {
         // given
-        User user = setupUser("123", "123", "123", null);
-        User user2 = setupUser("1234", "123", "123", null);
-        userRepository.saveAll(List.of(user, user2));
+        User user = userRepository.findById(1L).get();
+        User user2 = userRepository.findById(3L).get();
 
-        BankAccount oldBankAccount = setupBankAccount(user, "!23", "123", "123", false);
-        BankAccount newBankAccount = setupBankAccount(user2, "!234", "1243", "1234", false);
-        bankAccountRepository.saveAll(List.of(oldBankAccount, newBankAccount));
+        BankAccount newBankAccount = bankAccountRepository.findById(user2.getId()).get();
 
         // when & then
-        assertThatThrownBy(() -> bankAccountService.changeAccountState(user.getId(), newBankAccount.getId()))
+        assertThatThrownBy(() -> bankAccountCommandService.changeAccountState(user.getId(), newBankAccount.getId()))
                 .isInstanceOf(CustomException.class)
                 .hasMessageContaining(ErrorCode.INACCURATE_BANK_ACCOUNT.getErrorMessage());
     }
@@ -132,16 +128,12 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
     @Test
     void changeBankAccountState_ALREADY() {
         // given
-        User user = setupUser("123", "123", "123", null);
-        userRepository.save(user);
+        User user = userRepository.findById(1L).get();
 
-        BankAccount primaryAccount = bankAccountService.getPrimaryAccount(user.getId());
-
-     //   BankAccount bankAccount = setupBankAccount(user, "!23", "123", "123", true);
-     //   bankAccountRepository.save(bankAccount);
+        BankAccount primaryAccount = bankAccountQueryService.getPrimaryAccount(user.getId());
 
         // when & then
-        assertThatThrownBy(() -> bankAccountService.changeAccountState(user.getId(), primaryAccount.getId()))
+        assertThatThrownBy(() -> bankAccountCommandService.changeAccountState(user.getId(), primaryAccount.getId()))
                 .isInstanceOf(CustomException.class)
                 .hasMessageContaining(ErrorCode.SAME_ACCOUNT_STATUS.getErrorMessage());
     }
@@ -150,23 +142,16 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
     @Test
     void changeBankAccountState() {
         // given
-        User user = setupUser("123", "123", "123", null);
-        userRepository.save(user);
-
-        BankAccount oldBankAccount = setupBankAccount(user, "!23", "123", "123", false);
-        BankAccount newBankAccount = setupBankAccount(user, "!234", "1243", "1234", false);
-        bankAccountRepository.saveAll(List.of(oldBankAccount, newBankAccount));
-
-        BankAccount primaryAccount = bankAccountService.getPrimaryAccount(user.getId());
+        User user = userRepository.findById(3L).get();
 
         // when
-        bankAccountService.changeAccountState(user.getId(), newBankAccount.getId());
+        bankAccountCommandService.changeAccountState(user.getId(), 151L);
 
-        BankAccount updatedOld = bankAccountRepository.findById(oldBankAccount.getId()).orElseThrow();
-        BankAccount updatedNew = bankAccountRepository.findById(newBankAccount.getId()).orElseThrow();
+        BankAccount updatedOld = bankAccountRepository.findById(3L).get();
+        BankAccount updatedNew = bankAccountRepository.findById(151L).get();
 
         // then
-        assertThat(primaryAccount.isDefault()).isFalse();
+        assertThat(updatedOld.isDefault()).isFalse();
         assertThat(updatedNew.isDefault()).isTrue();
     }
 
@@ -180,7 +165,7 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
         bankAccountRepository.save(bankAccount);
 
         // when & then
-        assertThatThrownBy(() -> bankAccountService.deleteBankAccount(99L, bankAccount.getId()))
+        assertThatThrownBy(() -> bankAccountCommandService.deleteBankAccount(99L, bankAccount.getId()))
                 .isInstanceOf(CustomException.class)
                 .hasMessageContaining(ErrorCode.INACCURATE_BANK_ACCOUNT.getErrorMessage());
     }
@@ -195,7 +180,7 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
         bankAccountRepository.save(bankAccount);
 
         // when & then
-        assertThatThrownBy(() -> bankAccountService.deleteBankAccount(user.getId(), bankAccount.getId()))
+        assertThatThrownBy(() -> bankAccountCommandService.deleteBankAccount(user.getId(), bankAccount.getId()))
                 .isInstanceOf(CustomException.class)
                 .hasMessageContaining(ErrorCode.BASIC_ACCOUNT_NOT_DELETED.getErrorMessage());
     }
@@ -212,7 +197,7 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
         bankAccountRepository.saveAll(List.of(bankAccount, bankAccount2));
 
         // when
-        bankAccountService.deleteBankAccount(user.getId(), bankAccount2.getId());
+        bankAccountCommandService.deleteBankAccount(user.getId(), bankAccount2.getId());
 
         // then
         boolean exists = bankAccountRepository.findById(bankAccount2.getId()).isPresent();
@@ -234,7 +219,7 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
         int size = bankAccountRepository.findAllByUserId(user.getId()).size();
 
         // when
-        List<BankAccountGetResponse> responses = bankAccountService.getBankAccounts(user.getId());
+        List<BankAccountGetResponse> responses = bankAccountQueryService.getBankAccounts(user.getId());
 
         // then
         assertThat(responses).hasSize(size);
@@ -246,15 +231,14 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
     @Test
     void getPrimaryDeliveryInfo() {
         // given
-        User user = setupUser("123", "123", "123", null);
-        userRepository.save(user);
+        User user = userRepository.findById(1L).get();
 
         BankAccount bankAccount = setupBankAccount(user, "!23", "123", "123", false);
         BankAccount bankAccount2 = setupBankAccount(user, "!234", "124", "1243", false);
         bankAccountRepository.saveAll(List.of(bankAccount, bankAccount2));
 
         // when
-        BankAccount response = bankAccountService.getPrimaryAccount(user.getId());
+        BankAccount response = bankAccountQueryService.getPrimaryAccount(user.getId());
 
         // then
         assertThat(response.isDefault()).isTrue();
@@ -272,7 +256,7 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
         bankAccountRepository.saveAll(List.of(bankAccount, bankAccount2));
 
         // when
-        assertThatThrownBy(() -> bankAccountService.getAccount(user.getId(), 99L))
+        assertThatThrownBy(() -> bankAccountQueryService.getAccount(user.getId(), 99L))
                 .isInstanceOf(CustomException.class)
                 .hasMessageContaining(ErrorCode.BANK_ACCOUNT_NOT_FOUND.getErrorMessage());
     }
@@ -289,7 +273,7 @@ class BankAccountServiceTest extends BankAccountIntegrationTestSupport {
         bankAccountRepository.saveAll(List.of(bankAccount, bankAccount2));
 
         // when
-        BankAccount response = bankAccountService.getAccount(user.getId(), bankAccount.getId());
+        BankAccount response = bankAccountQueryService.getAccount(user.getId(), bankAccount.getId());
 
         // then
         assertThat(response.getAccountNumber()).isEqualTo("!23");
